[package]
name = "sentry"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
license = "Apache-2.0 OR MIT"

[dependencies]
reqwest = { version = "0.8.5", features = ["unstable"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
url = "1.2"
uuid = { version = "0.6", features = ["v4", "serde"] }
hyper = "0.11"
chrono = { version = "0.4", features = ["serde"] }
backtrace = "0.3"
futures = "0.1"
tokio-core = "0.1"
rustc-demangle = "0.1"

[target.'cfg(target_os="macos")'.dependencies]
uname = "0.1"
sysctl = "0.1.4"
